deploy/tests/e2e/https/config/deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: haproxytech/http-echo:latest
          imagePullPolicy: Never
          args:
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: http-echo
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  selector:
    app: http-echo
---
kind: Secret
apiVersion: v1
metadata:
  name: haproxy-default
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURsekNDQW4rZ0F3SUJBZ0lVY2NqSzlmNHhDcE5HM3JpeGJCelJ3Qjg1VzNJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1d6RUxNQWtHQTFVRUJoTUNSbEl4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeEVEQU9CZ05WQkFvTQpCMGhCVUZKUFdGa3hDekFKQmdOVkJBc01Ba2xETVJnd0ZnWURWUVFEREE5a1pXWmhkV3gwTG1oaGNISnZlSGt3CkhoY05NakV3TWpJMk1URTBNak16V2hjTk1qRXdNekk0TVRFME1qTXpXakJiTVFzd0NRWURWUVFHRXdKR1VqRVQKTUJFR0ExVUVDQXdLVTI5dFpTMVRkR0YwWlRFUU1BNEdBMVVFQ2d3SFNFRlFVazlZV1RFTE1Ba0dBMVVFQ3d3QwpTVU14R0RBV0JnTlZCQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRQzUxa2w0SDQ5NzZaSlYKVTR5MDRCa3dtbUxld0ZyeGNDVzVJYU1ib2dNK3kvL2UwQXBpV3NoUWNvMEpGOVlYbUpmR3l1UUpNS0VjU1NzZgpGL010M2hiWW8vTFlacUV4eDhXRzQ0WDljZVNBUitaN3hHY0U5MktUUGkwSUh0bzA1RVMxVTdHVDRDcDlWZEdKCk1YeXJEdXZDd01VUUx4RUdzMzIxOG0yVVJtZ1d2SkRnQnVPYmdKRHlvamRDbDU3V1B1SnprNXR5Z09qcUhvSEsKR1dzLzF1K1AyWlVXSUg2bGtHWGNCSzA4Rk5lS0l0a1ZORmlYbjUvQzJHRlFFdFhya3J5d2xVODhvR1J1b3ViWApnTC9sWGJ4bzE0bGhsQ [...]
type: kubernetes.io/tls
---
kind: Secret
apiVersion: v1
metadata:
  name: haproxy-offload-test
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvVENDQW9tZ0F3SUJBZ0lVSERSWS9TUnRjK0RwKzFibzk4ZkJIZGpOM05Zd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lERUxNQWtHQTFVRUJoTUNSbEl4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeEVEQU9CZ05WQkFvTQpCMGhCVUZKUFdGa3hDekFKQmdOVkJBc01Ba2xETVIwd0d3WURWUVFEREJSdlptWnNiMkZrTFhSbGMzUXVhR0Z3CmNtOTRlVEFlRncweU1UQXlNall4TVRRek5UbGFGdzB5TVRBek1qZ3hNVFF6TlRsYU1HQXhDekFKQmdOVkJBWVQKQWtaU01STXdFUVlEVlFRSURBcFRiMjFsTFZOMFlYUmxNUkF3RGdZRFZRUUtEQWRJUVZCU1QxaFpNUXN3Q1FZRApWUVFMREFKSlF6RWRNQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktVd2dnU2hBZ0VBQW9JQkFRREFQL2dORGVCSU95YXMKeFJyVUpiWHBkTHNMTnYzMFpIWkxOcldZZy9oZVJ6SHFXeUF1anlzVGlSa3duSGJwcTNJWTFINXhsNnRESm9qSApSSzIvUkIrSUpRN2J3RHJGZERmbEYwNEx6SjdsOW55bjA2MG12R3RvMnZEZ2pndjJtUmV6MVJvT0w1YjFrUWZ0CndBb3FoSUh0RkV5MU1lV0VUcUVPZ0ovRXNnY1Z4RVFuVzVKbkFsTlVuTFIwbjBPbll1MDRtNjUrMlQxSjNEeWYKclVOT3luenJVcTNIcmU3cjBadVBtQllJTGIrSDJzaFNCZWE0TWQ4eTUraFVrRzRlUFdjTVNRUUIyMnR1aDRwdApmYmJ3d0htRUxFR0NSc [...]
type: kubernetes.io/tls
