deploy/tests/e2e/https/config/passthrough-sidecar-delete.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: http-echo-passthrough-sidecar
  namespace: e2e-tests-https
